# prettifier

./: .anjuta_sym_db.db  .gitignore  AUTHORS.md  LICENSE.md  README.md  app  com.github.fleury08.prettifier.json  com.github.fleury08.prettifier.yml  meson.build  meson.build~
.anjuta/session/: anjuta.session  dock-layout.xml
.github/workflows/: main.yml
data/: com.github.fleury08.prettifier.appdata.xml  com.github.fleury08.prettifier.appdata.xml.in  com.github.fleury08.prettifier.desktop  com.github.fleury08.prettifier.desktop.in  com.github.fleury08.prettifier.gresource.xml  com.github.fleury08.prettifier.gschema.xml  meson.build
data/css/: style.css
data/images/: .~lock.com.github.fleury08.prettifier.odg#  com.github.fleury08.prettifier.odg  icon.psd
debian/: changelog  changelog~  control  copyright  rules
po/: LINGUAS  POTFILES  com.github.fleury08.prettifier.pot  cs.po  en.po  fr.po
src/: Application.vala  JSONPathParser.vala  Main.vala  Prettify.vala  Window.vala  XMLPathParser.vala  meson.build
src/configs/: ColorScheme.vala  Constants.vala  Settings.vala  TypeOfFile.vala
src/controllers/: AppController.vala
src/indexer/: ICrawlerIndexer.vala  JsonIndexer.vala  LanguageTypeIndexer.vala  RowIndexer.vala  XmlIndexer.vala
src/views/: AppView.vala
src/widgets/: ControlPanel.vala  HeaderBar.vala
tests/: assert.vala  test.vala
