sources += files(
    'configs/Constants.vala',
    'configs/TypeOfFile.vala',
    'configs/ColorScheme.vala',
    
    'controllers/AppController.vala',
    
    'views/AppView.vala',

    'widgets/HeaderBar.vala',
    'widgets/ControlPanel.vala',

    'Application.vala',
    'JSONPathParser.vala',
    'XMLPathParser.vala',
    'Main.vala',
    'Window.vala',
    'Prettify.vala'
)
