sources += files(
    'configs/Constants.vala',
    'configs/TypeOfFile.vala',
    'configs/ColorScheme.vala',
    
    'indexer/JsonIndexer.vala',
    'indexer/LanguageTypeIndexer.vala',
    'indexer/ICrawlerIndexer.vala',
    'indexer/XmlIndexer.vala',
    'indexer/RowIndexer.vala',

    'controllers/AppController.vala',
    
    'views/AppView.vala',

    'widgets/HeaderBar.vala',
    'widgets/ControlPanel.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala',
    'Prettify.vala'
)
